; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nouveau_acpi.c_nouveau_dsm_switchto.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nouveau_acpi.c_nouveau_dsm_switchto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@nouveau_dsm_priv = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@VGA_SWITCHEROO_IGD = common dso_local global i32 0, align 4
@NOUVEAU_DSM_LED_STAMINA = common dso_local global i32 0, align 4
@NOUVEAU_DSM_LED_SPEED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @nouveau_dsm_switchto to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nouveau_dsm_switchto(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nouveau_dsm_priv, i32 0, i32 1), align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %19

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @VGA_SWITCHEROO_IGD, align 4
  %10 = icmp eq i32 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %7
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nouveau_dsm_priv, i32 0, i32 0), align 4
  %13 = load i32, i32* @NOUVEAU_DSM_LED_STAMINA, align 4
  %14 = call i32 @nouveau_dsm_switch_mux(i32 %12, i32 %13)
  store i32 %14, i32* %2, align 4
  br label %19

15:                                               ; preds = %7
  %16 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nouveau_dsm_priv, i32 0, i32 0), align 4
  %17 = load i32, i32* @NOUVEAU_DSM_LED_SPEED, align 4
  %18 = call i32 @nouveau_dsm_switch_mux(i32 %16, i32 %17)
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %15, %11, %6
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @nouveau_dsm_switch_mux(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
